--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Testing with react-native-paper, react -navigation "
   }
 }
